# meet_gen

./: .gitignore  AGENTS.md  README.md  pyproject.toml  tz_document_generator_mvp.md
input/: data.xlsx
samples/for_customer/: README.md  create_samples.py
samples/for_customer/input/: developer_contractors.xlsx
samples/for_customer/templates/: act_acceptance.docx  invoice.docx  service_contract.docx
samples/for_customer_2/: LEGAL_CHECK.md  PROCESS_REPORT.md  README.md  create_samples.py
samples/for_customer_2/input/: developer_work_2026.xlsx
samples/for_customer_2/templates/: framework_service_contract.docx  monthly_acceptance_act.docx  monthly_work_request.docx
samples/full_set/: README.md
samples/full_set/input/: contracts.xlsx
samples/full_set/templates/: contract_template.docx
src/: __init__.py  errors.py  excel_reader.py  filename_builder.py  formatters.py  main.py  template_validator.py  word_renderer.py
templates/: template.docx
tests/: conftest.py  test_excel_reader.py  test_filename_builder.py  test_formatters.py  test_template_validator.py  test_word_renderer_and_cli.py
