[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meet-gen"
version = "0.1.0"
description = "MVP Word document generator from Excel rows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docxtpl>=0.16.8",
    "openpyxl>=3.1.2",
    "pydantic>=2.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "python-docx>=1.1.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
